*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@224 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/build.properties
+++ b/net.sourceforge.eclipsetrader/build.properties
@@ -13,4 +13,5 @@ bin.includes = plugin.xml,\
                schema/,\
                icons/,\
                about.ini,\
-               about.properties
+               about.properties,\
+               plugin_it.properties
