--- a/net.sourceforge.eclipsetrader.ui.views/plugin.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.properties
@@ -11,12 +11,12 @@ stockwatch.clearAlerts=&Clear Alerts
 stockwatch.colors=Colors
 chart.title1=Historical Chart
 chart.title2=Intraday
-chart.line=Line
-chart.candle=Candle
-chart.bar=Bar
-chart.add=Add
-chart.edit=Edit
-chart.remove=Delete
+chart.line=&Line
+chart.candle=&Candle
+chart.bar=&Bar
+chart.add=&Add
+chart.edit=&Edit
+chart.remove=&Delete
 news.title=News List
 news.browser=News Browser
 book.title=Level II
@@ -35,6 +35,7 @@ actions.moveUp=Move Up
 actions.showStockwatch=Show StockWatch
 actions.showNews=Show News
 actions.showIndices=Show Indices
+actions.delete=Delete
 AccumulationDistributionChart.label=Accumulation/Distribution
 BollingerBandsChart.label=Bollinger Bands
 AverageChart.label=Moving Average
