--- a/net.sourceforge.eclipsetrader.directa/plugin.xml
+++ b/net.sourceforge.eclipsetrader.directa/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="net.sourceforge.eclipsetrader.directa"
    name="Directa Italy"
-   version="0.12.0"
+   version="0.12.1"
    provider-name="Sourceforge.net"
    class="net.sourceforge.eclipsetrader.directa.DirectaPlugin">
 
@@ -134,7 +134,7 @@
          point="org.eclipse.ui.actionSets">
       <actionSet
             label="Directa"
-            visible="true"
+            visible="false"
             id="net.sourceforge.eclipsetrader.directa.ActionSet">
          <menu
                label="Directa"
@@ -302,6 +302,12 @@
             category="net.sourceforge.eclipsetrader.directa.general"
             name="Colori"
             id="net.sourceforge.eclipsetrader.directa.color"/>
+   </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension targetID="net.sourceforge.eclipsetrader.TraderPerspective">
+         <actionSet id="net.sourceforge.eclipsetrader.directa.ActionSet"/>
+      </perspectiveExtension>
    </extension>
 
 </plugin>
