*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@227 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.directa/build.properties
+++ b/net.sourceforge.eclipsetrader.directa/build.properties
@@ -3,4 +3,6 @@ output.directa.jar = bin/
 bin.includes = plugin.xml,\
                directa.jar,\
                push.jar,\
-               icons/
+               icons/,\
+               about.ini,\
+               epl-v10.html
