--- a/net.sourceforge.eclipsetrader.ui.views/plugin.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.properties
@@ -42,3 +42,7 @@ AverageChart.label=Moving Average
 RSIChart.label=R.S.I.
 StochasticChart.label=Stochastic Oscillator
 TrendChart.label=Trend
+DirectionalMovementIndex.label=Directional Movement Index
+AverageTrueRange.label=Average True Range
+CommodityChannelIndex.label=Commodity Channel Index
+DetrendedPriceOscillator.label=Detrended Price Oscillator
