--- a/net.sourceforge.eclipsetrader.ui.views/plugin.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.properties
@@ -36,13 +36,20 @@ actions.showStockwatch=Show StockWatch
 actions.showNews=Show News
 actions.showIndices=Show Indices
 actions.delete=Delete
-AccumulationDistributionChart.label=Accumulation/Distribution
-BollingerBandsChart.label=Bollinger Bands
-AverageChart.label=Moving Average
-RSIChart.label=R.S.I.
-StochasticChart.label=Stochastic Oscillator
-TrendChart.label=Trend
-DirectionalMovementIndex.label=Directional Movement Index
-AverageTrueRange.label=Average True Range
-CommodityChannelIndex.label=Commodity Channel Index
-DetrendedPriceOscillator.label=Detrended Price Oscillator
+TrendChart.label=Trend - TREND
+AccumulationDistributionChart.label=Accumulation Distribution - AD
+AverageChart.label=Moving Average - MA
+AverageTrueRange.label=Average True Range - ATR
+BollingerBandsChart.label=Bollinger Bands - BB
+CommodityChannelIndex.label=Commodity Channel Index - CCI
+DetrendedPriceOscillator.label=Detrended Price Oscillator - DPO
+DirectionalMovementIndex.label=Directional Movement Index - DMI
+MACD.label=Moving Average Convergence Divergence - MACD
+MarketThermometerChart.label=Elder's Market Thermometer - THERM
+MAOSC.label=Moving Avergate Oscillator - MAOSC
+RSIChart.label=Relative Strength Index - RSI
+SafezoneStop.label=Elder's Safezone Stop - SZ
+StockChart.label=Symbol - SYMBOL
+StochasticChart.label=Stochastic - STOCH
+ForceIndex.label=Force Index - FI
+VolumeTrends.label=Volume Trends - VT
