*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@287 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/build.properties
+++ b/net.sourceforge.eclipsetrader/build.properties
@@ -14,4 +14,5 @@ bin.includes = plugin.xml,\
                icons/,\
                about.ini,\
                about.properties,\
-               plugin_it.properties
+               epl-v10.html
+src.includes = src/net/sourceforge/eclipsetrader/internal/messages.properties
