*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@295 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin.properties
@@ -17,6 +17,8 @@ chart.bar=&Bar
 chart.add=&Add
 chart.edit=&Edit
 chart.remove=&Delete
+chart.indicators=Indicators
+chart.show=Show
 news.title=News List
 news.browser=News Browser
 book.title=Level II
@@ -35,6 +37,7 @@ actions.moveUp=Move Up
 actions.showStockwatch=Show StockWatch
 actions.showNews=Show News
 actions.showIndices=Show Indices
+actions.showStockList=Show Stock List
 actions.delete=Delete
 TrendChart.label=Trend - TREND
 AccumulationDistributionChart.label=Accumulation Distribution - AD
