--- a/net.sourceforge.eclipsetrader.help/build.properties
+++ b/net.sourceforge.eclipsetrader.help/build.properties
@@ -7,11 +7,8 @@ bin.includes = plugin.xml,\
                html.zip,\
                toc_Ref.xml,\
                book.xml,\
-               license.txt,\
                doc.zip,\
                toc.xml,\
                cpl-v10.html,\
                user_guide.xml,\
-               nl/it/book.xml,\
-               nl/it/doc.zip,\
-               nl/it/user_guide.xml
+               epl-v10.html
