--- a/net.sourceforge.eclipsetrader.borsaitalia/build.properties
+++ b/net.sourceforge.eclipsetrader.borsaitalia/build.properties
@@ -2,4 +2,5 @@ source.borsaitalia.jar = src/
 output.borsaitalia.jar = bin/
 bin.includes = plugin.xml,\
                borsaitalia.jar,\
-               about.ini
+               about.ini,\
+               META-INF/
