--- a/net.sourceforge.eclipsetrader.borsaitalia/plugin.xml
+++ b/net.sourceforge.eclipsetrader.borsaitalia/plugin.xml
@@ -1,24 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="net.sourceforge.eclipsetrader.borsaitalia"
-   name="Borsa Italiana"
-   version="0.11.1"
-   provider-name="Sourceforge.net"
-   class="net.sourceforge.eclipsetrader.borsaitalia.BorsaitaliaPlugin">
+<plugin>
 
-   <runtime>
-      <library name="borsaitalia.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-
-   <requires>
-      <import plugin="org.eclipse.ui"/>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="net.sourceforge.eclipsetrader"/>
-   </requires>
-   <extension
+     <extension
          point="net.sourceforge.eclipsetrader.chartDataProvider">
       <provider
             label="Borsa Italiana"
