Changes for RCP 3.1 compatibility and code cleanup
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@308 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.directa/build.properties
+++ b/net.sourceforge.eclipsetrader.directa/build.properties
@@ -5,4 +5,5 @@ bin.includes = plugin.xml,\
                push.jar,\
                icons/,\
                about.ini,\
-               epl-v10.html
+               epl-v10.html,\
+               META-INF/
