--- a/net.sourceforge.eclipsetrader/build.properties
+++ b/net.sourceforge.eclipsetrader/build.properties
@@ -14,5 +14,6 @@ bin.includes = plugin.xml,\
                icons/,\
                about.ini,\
                about.properties,\
-               epl-v10.html
+               epl-v10.html,\
+               META-INF/
 src.includes = src/net/sourceforge/eclipsetrader/internal/messages.properties
